--- a/index.html
+++ b/index.html
@@ -5,38 +5,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Pirates Speak</title>
+    <title> Aliens Speak</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
     <nav class="navigation">
-        <div> Pirates Talk</div>
+        <div> Aliens Talk 👽</div>
     </nav>
 
 
     <textarea id="textarea" class="tbplaceholder" placeholder="Put your sentence in English here & we will convert it to banana">
     </textarea>
 
-    <div style="font-size: xx-large; text-align: center" class="txt-basic">👆Type here👆</div>
+    <div style="font-size: xx-large; text-align: center" class="txt-basic">👽Type Here👽</div>
 
     <button class="btn-style" id="tButton">Translate</button>
 
-    <img src="https://us.123rf.com/450wm/imogi/imogi1711/imogi171100007/89461687-pirate-skull-emblem-with-swords-anchor-and-rope-on-white-background-.jpg?ver=6" class="img-resize" alt="Minions" />
+    <img src="/images/ufo-2413965_1920.jpg" class="img-resize" alt="Minions" />
 
 
-    <div style="font-size: xx-large; text-align: center">👇Pirates Language👇</div>
-    <div id="output"></div>
+    <div style="font-size: xx-large; text-align: center; color: red;">👽Aliens Language👽</div>
+    <div id="output" style="background-color: black; color: red;"></div>
 
 
     <footer class="footer">
-        <div class="footer-header">You can find me here</div>
+        <div class="footer-header">You Can Find Me Here</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://instagram.com/shivamlahane9973">Instagram</a>
+                <a class="link" href="https://instagram.com/shivamlahane9973">INSTAGRAM</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/Shivam9973">GitHub</a>
+                <a class="link" href="https://github.com/Shivam9973">GITHUB</a>
             </li>
         </ul>
     </footer>
