--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navigation">
-        <div> Aliens Talk 👽</div>
+        <div> Aliens Dialect 👽</div>
     </nav>
 
 
@@ -22,10 +22,10 @@
 
     <button class="btn-style" id="tButton">Translate</button>
 
-    <img src="/images/ufo-2413965_1920.jpg" class="img-resize" alt="Minions" />
+    <img src="/images/ufo-2413965_1920.jpg" class="img-resize" />
 
 
-    <div style="font-size: xx-large; text-align: center; color: red;">👽Aliens Language👽</div>
+    <div style="font-size: xx-large; text-align: center; color: red;">👽Aliens Dialect👽</div>
     <div id="output" style="background-color: black; color: red;"></div>
 
 
